보안 취약점 개선